[gd_scene load_steps=4 format=3 uid="uid://bunfx6tl2smu1"]

[ext_resource type="Script" uid="uid://ceqpkma3uvnw1" path="res://Menus/start_menu.gd" id="1_omtxr"]
[ext_resource type="Texture2D" uid="uid://h0b10gbbd2dh" path="res://Assets/background_wood1.png" id="1_ylpl7"]
[ext_resource type="AudioStream" uid="uid://jdq62c0tpjcp" path="res://Audio/pickupCoin.wav" id="3_xgchj"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omtxr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -768.0
offset_right = 1024.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ylpl7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level_0"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level_1"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level_2"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Clickbutton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xgchj")
volume_db = -10.0

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="VBoxContainer/Button5" to="." method="_on_button_5_button_down"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
